force-app/main/default/objects/User/fields/Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Team__c</fullName>
    <description>This Field will be used by NAM system administrator to update the account team of the specific user</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Team</label>
    <length>16</length>
    <type>Text</type>
</CustomField>