force-app/main/default/objects/User/fields/Annual_Implant_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Implant_Quota__c</fullName>
    <label>Annual Implant Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>