force-app/main/default/objects/User/fields/Bulletin_Board__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_Board__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulletin Board</label>
    <type>Checkbox</type>
</CustomField>