force-app/main/default/objects/User/fields/Bulletin_Board_Date__c.field-meta.xml
<CustomField>
    <fullName>Bulletin_Board_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bulletin Board Date</label>
    <type>DateTime</type>
</CustomField>