force-app/main/default/objects/User/fields/Business_Division__c.field-meta.xml
<CustomField>
    <fullName>Business_Division__c</fullName>
    <description>This field is required-There are workflow and validation rules that uses this field to determine processing path based on the Geography, Business Division and/or Region field(s) setting of the user.</description>
    <inlineHelpText>This field is required-There are workflow and validation rules that uses this field to determine processing path based on the Geography, Business Division and/or Region field(s) setting of the user.</inlineHelpText>
    <label>Business Division</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BH</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>DN</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>HL</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
            <value>
                <fullName>ZSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>