force-app/main/default/objects/User/fields/Compliance_Officer__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Officer__c</fullName>
    <label>Compliance Officer</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>