force-app/main/default/objects/User/fields/Contact_to_user__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_user__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Contact to user</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>