force-app/main/default/objects/User/fields/dsfs__DSProSFUsername__c.field-meta.xml
<CustomField>
    <fullName>dsfs__DSProSFUsername__c</fullName>
    <description>DocuSign username</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DSProSFUsername</label>
    <length>50</length>
    <type>Text</type>
</CustomField>