force-app/main/default/objects/User/fields/Einstein_All_Access__c.field-meta.xml
<CustomField>
    <fullName>Einstein_All_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that this user can view all data in the RC Sales Dataset</description>
    <inlineHelpText>Flag to indicate that this user can view all data in the RC Sales Dataset</inlineHelpText>
    <label>Einstein All Access</label>
    <type>Checkbox</type>
</CustomField>