force-app/main/default/objects/User/fields/Einstein_Area__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Area__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Einstein Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>