force-app/main/default/objects/User/fields/Einstein_Continent__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Continent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Einstein Continent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>