force-app/main/default/objects/User/fields/Einstein_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Product_Group__c</fullName>
    <label>Einstein Product Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
            <value>
                <fullName>350</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>550</fullName>
            </value>
            <value>
                <fullName>600</fullName>
            </value>
            <value>
                <fullName>650</fullName>
            </value>
            <value>
                <fullName>700</fullName>
            </value>
            <value>
                <fullName>750</fullName>
            </value>
            <value>
                <fullName>800</fullName>
            </value>
            <value>
                <fullName>815</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>