force-app/main/default/objects/User/fields/Einstein_Region__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Einstein Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>