force-app/main/default/objects/User/fields/Fiscal_Day__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Day__c</fullName>
    <formula>TODAY() - DATE(YEAR(TODAY()), 1, 1) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>