force-app/main/default/objects/User/fields/FlowLookup__c.field-meta.xml
<CustomField>
    <fullName>FlowLookup__c</fullName>
    <label>FlowLookup</label>
    <relationshipName>FlowLooukp</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>