force-app/main/default/objects/User/fields/genehmiger__c.field-meta.xml
<CustomField>
    <fullName>genehmiger__c</fullName>
    <label>Genehmiger</label>
    <relationshipName>R00N20000000uIk2EAE</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>