force-app/main/default/objects/User/fields/HCP_Expense_Approver__c.field-meta.xml
<CustomField>
    <fullName>HCP_Expense_Approver__c</fullName>
    <label>HCP Expense Approver</label>
    <relationshipName>Users1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>