force-app/main/default/objects/User/fields/IcertisCLM__ICM_User_ID__c.field-meta.xml
<CustomField>
    <fullName>IcertisCLM__ICM_User_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ICM User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>