force-app/main/default/objects/User/fields/Jobdescription__c.field-meta.xml
<CustomField>
    <fullName>Jobdescription__c</fullName>
    <label>Funktion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Executive Assistant</fullName>
            </value>
            <value>
                <fullName>Executive Director</fullName>
            </value>
            <value>
                <fullName>Finance Director</fullName>
            </value>
            <value>
                <fullName>Finance Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Assistant</fullName>
            </value>
            <value>
                <fullName>Marketing Director</fullName>
            </value>
            <value>
                <fullName>Marketing Event Administrator</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Marketing Producer</fullName>
            </value>
            <value>
                <fullName>Marketing Product Manager</fullName>
            </value>
            <value>
                <fullName>Operations Administrator</fullName>
            </value>
            <value>
                <fullName>Operations Director</fullName>
            </value>
            <value>
                <fullName>Operations IT Consultant</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Operations Purchasing Administrator</fullName>
            </value>
            <value>
                <fullName>Operations Warehouse Operative</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Sales Regional Manager</fullName>
            </value>
            <value>
                <fullName>Sales Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>