force-app/main/default/objects/User/fields/Knee_Product_Segment__c.field-meta.xml
<CustomField>
    <fullName>Knee_Product_Segment__c</fullName>
    <description>Used in the Knee Alta project. This field is used in formulas to drive whether or not a topic, response or meeting needs to go through the approval process by a segment lead.</description>
    <label>Knee Product Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cam Post</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Mobile Bearing</fullName>
            </value>
            <value>
                <fullName>Natural Cruciate</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>