force-app/main/default/objects/User/fields/Management__c.field-meta.xml
<CustomField>
    <fullName>Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kader</label>
    <type>Checkbox</type>
</CustomField>