force-app/main/default/objects/User/fields/ManagementBoard__c.field-meta.xml
<CustomField>
    <fullName>ManagementBoard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geschäftsleitung</label>
    <type>Checkbox</type>
</CustomField>