force-app/main/default/objects/User/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Used for IT license allocation process. IT Finance allocates SFDC licenses by region and market.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Market</label>
    <length>10</length>
    <type>Text</type>
</CustomField>