force-app/main/default/objects/User/fields/Pass_Reset__c.field-meta.xml
<CustomField>
    <fullName>Pass_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test field for user password reset.</description>
    <label>Requested Password Reset</label>
    <type>Checkbox</type>
</CustomField>