force-app/main/default/objects/User/fields/Picture_Id__c.field-meta.xml
<CustomField>
    <fullName>Picture_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Picture Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>