force-app/main/default/objects/User/fields/Privatadress_PLZ__c.field-meta.xml
<CustomField>
    <fullName>Privatadress_PLZ__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privatadress PLZ</label>
    <length>10</length>
    <type>Text</type>
</CustomField>