force-app/main/default/objects/User/fields/Privatadresse_Land__c.field-meta.xml
<CustomField>
    <fullName>Privatadresse_Land__c</fullName>
    <description>Privatadresse Land</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Privatadresse Land</label>
    <length>50</length>
    <type>Text</type>
</CustomField>