force-app/main/default/objects/User/fields/Privatadresse_Ort__c.field-meta.xml
<CustomField>
    <fullName>Privatadresse_Ort__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Privatadresse Ort</label>
    <length>70</length>
    <type>Text</type>
</CustomField>