force-app/main/default/objects/User/fields/Privatadresse_Strasse__c.field-meta.xml
<CustomField>
    <fullName>Privatadresse_Strasse__c</fullName>
    <description>Privatadresse Strasse</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Privatadresse Strasse</label>
    <length>70</length>
    <type>Text</type>
</CustomField>