force-app/main/default/objects/User/fields/Q1_Day__c.field-meta.xml
<CustomField>
    <fullName>Q1_Day__c</fullName>
    <formula>If(
(Q1_Working_Days__c -(( Q1_Working_Days__c )- Working_Days__c )&gt; Q1_Working_Days__c ),
 Q1_Working_Days__c ,
Q1_Working_Days__c -(( Q1_Working_Days__c )- Working_Days__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>