force-app/main/default/objects/User/fields/Q1_Total_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q1_Total_Quota__c</fullName>
    <label>Q1 Total Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>