force-app/main/default/objects/User/fields/Q1_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Q1_Working_Days__c</fullName>
    <formula>((DATE(2010, 03, 31) - DATE(2010, 01, 01))/7)*5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q1 Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>