force-app/main/default/objects/User/fields/Q2_Regen_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q2_Regen_Quota__c</fullName>
    <label>Q2 Regen Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>