force-app/main/default/objects/User/fields/Q2_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Q2_Working_Days__c</fullName>
    <formula>((DATE(2010, 06, 30) - DATE(2010, 04, 01))/7)*5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>