force-app/main/default/objects/User/fields/Q3_Day__c.field-meta.xml
<CustomField>
    <fullName>Q3_Day__c</fullName>
    <formula>If(
(Q3_Working_Days__c -(( Q1_Working_Days__c + Q2_Working_Days__c + Q3_Working_Days__c )- Working_Days__c )&gt; Q3_Working_Days__c ),
Q3_Working_Days__c ,
Q3_Working_Days__c -(( Q1_Working_Days__c + Q2_Working_Days__c + Q3_Working_Days__c )- Working_Days__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>