force-app/main/default/objects/User/fields/Q3_Total_Quota__c.field-meta.xml
<CustomField>
    <fullName>Q3_Total_Quota__c</fullName>
    <label>Q3 Total Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>