force-app/main/default/objects/User/fields/Q3_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Q3_Working_Days__c</fullName>
    <formula>((DATE(2010, 09, 30) - DATE(2010, 07, 01))/7)*5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q3 Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>