force-app/main/default/objects/User/fields/Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Rep_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>