force-app/main/default/objects/User/fields/Team_Assignment_Overflow__c.field-meta.xml
<CustomField>
    <fullName>Team_Assignment_Overflow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Assignment Overflow</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>