force-app/main/default/objects/User/fields/Teams3__c.field-meta.xml
<CustomField>
    <fullName>Teams3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Teams3</label>
    <type>TextArea</type>
</CustomField>