force-app/main/default/objects/User/fields/Teams__c.field-meta.xml
<CustomField>
    <fullName>Teams__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Teams</label>
    <type>TextArea</type>
</CustomField>