force-app/main/default/objects/User/fields/US_Ortho_Role__c.field-meta.xml
<CustomField>
    <fullName>US_Ortho_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>US Ortho Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>