force-app/main/default/objects/User/fields/User_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Hire_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Hire Date</label>
    <type>Date</type>
</CustomField>