force-app/main/default/objects/User/fields/User_s_Manager_Updated__c.field-meta.xml
<CustomField>
    <fullName>User_s_Manager_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User&apos;s Manager Updated</label>
    <type>Checkbox</type>
</CustomField>