force-app/main/default/objects/User/fields/Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Working_Days__c</fullName>
    <formula>(Fiscal_Day__c /7) * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>