force-app/main/default/objects/User/fields/X90_Day_Exempt__c.field-meta.xml
<CustomField>
    <fullName>X90_Day_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This check box should be checked to show anyone who is exempt from the 90 day no login deactivation policy.</inlineHelpText>
    <label>90 Day Exempt</label>
    <type>Checkbox</type>
</CustomField>