force-app/main/default/objects/User/validationRules/AM_US_Service_Desk_not_able_to_create_Us.validationRule-meta.xml
<ValidationRule>
    <fullName>AM_US_Service_Desk_not_able_to_create_Us</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISNEW(),
OR($Profile.Id=&quot;00eC0000001SlCf&quot;))</errorConditionFormula>
    <errorMessage>You are not able to create new user&apos;s.</errorMessage>
</ValidationRule>